# graduation_research

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  config.py  database.py  database_migrate.py  entrypoint.sh  main.py  pyproject.toml
backend/.dump_data/: cosine_right_arm.json  get_right_arm_data.json  real_time_data.json  real_time_data2.py  trandformed_data.json
backend/api/: __init__.py  compare.py  insert.py  insertion.py  receive.py  retrieve.py
backend/dump_data/: aa.json  dd.json
backend/dump_data/1022/: a.json  b.json  c.json  d.json  fullbody.json  normal.json  right.json
backend/dump_data/1024/: a.json  b.json  c.json  d.json  e.json  f.json  g.json  h.json  rightArm.json  turn1_right_arm.json  turn_right_arm.json
backend/dump_data/1028/: a.json  (+2 more)
backend/manager/: choreography.py  choreography_manager.py  compare_corrected_data.py  compare_manager.py  db_data_manager.py  insertion_manager.py
backend/mcp_receiver/: convert_tran_data.py  convert_tran_data_pq.py  process_packet.py  receiver.py
backend/models/: body_parts.py  choreography.py  choreography_nc.py  choreography_pq.py
backend/schemas/: body_parts.py  choreography.py  schemas.py
backend/service/: body_parts.py  check_cos.py  check_sim.py  compare.py  compare_old.py  correct_position_and_rotation.py  create_body_parts_data.py  insert_bvh.py  insert_correct_manager.py  insert_data.py  insert_nc_bvh.py  insert_real_time_data.py  put_data.py  read_bvh.py  show_quaternion.py  store_user_data.py
backend/sql_app/: config.py  models.py  put_data.py  reset_db.py  schemas.py
(+38 files in other folders)
